--- a/essence/index.html
+++ b/essence/index.html
@@ -144,7 +144,7 @@
                             <span class="badge">Mango</span>
                             <h6>Button Through Strap Mini Dress</h6>
                             <p class="size">Size: S</p>
-                            <p class="color">Color: Red</p>
+                            <p class="color">Color: red</p>
                             <p class="price">$45.00</p>
                         </div>
                     </a>
@@ -233,7 +233,7 @@
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-3.jpg);">
                         <div class="catagory-content">
-                            <a href="#">Shoes</a>
+                            <a href="#">Chaussures</a>
                         </div>
                     </div>
                 </div>
